[gd_scene load_steps=5 format=3 uid="uid://xmk53x4dfjk7"]

[ext_resource type="Script" path="res://Scripts/boss.gd" id="1_tapsp"]
[ext_resource type="Texture2D" uid="uid://crx1pqph7eqyk" path="res://Assets/kenney_pixel-shmup/Ships/ship_0015.png" id="1_y4nvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4aifu"]
size = Vector2(316, 147)

[sub_resource type="CircleShape2D" id="CircleShape2D_q036b"]
radius = 671.003

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_tapsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
scale = Vector2(10, 10)
texture = ExtResource("1_y4nvj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_4aifu")

[node name="SpawnPos1" type="Marker2D" parent="."]
position = Vector2(-95, 50)

[node name="SpawnPos2" type="Marker2D" parent="."]
position = Vector2(95, 50)

[node name="ShootSpeed" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_q036b")

[connection signal="timeout" from="ShootSpeed" to="." method="_on_shoot_speed_timeout"]
[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
